--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "dio-typescript",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "tsc --watch",
     "start": "parcel index.html"
   },
   "author": "",
